# virchow

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  backfill_users.py  cookies.txt  ct.yaml  docker-bake.hcl  docker-compose-infra.yml  greptile.json  providers.json  pyproject.toml  reg.json  response.json
backend/: .gitignore  Dockerfile  Dockerfile.model_server  download_model.py  fix_roles.py  mini_test.txt  pyproject.toml  pytest.ini  supervisord.conf
backend/alembic/: README.md  env.py  run_multitenant_migrations.py
backend/alembic_tenants/: README.md  env.py
cli/: .gitignore  Dockerfile  README.md  go.mod  hatch_build.py  main.go  pyproject.toml
cli/cmd/: agents.go  ask.go  chat.go  configure.go  root.go  validate.go
cli/internal/api/: client.go  errors.go  stream.go
cli/internal/config/: config.go  config_test.go
cli/internal/models/: models.go
cli/internal/onboarding/: onboarding.go
cli/internal/parser/: parser.go  parser_test.go
cli/internal/tui/: app.go  commands.go  help.go  input.go  messages.go  splash.go
cli/internal/util/: styles.go
deployment/: README.md
desktop/: README.md  package-lock.json  package.json
rag_pipeline/: Dockerfile  docker-compose.yml  main.py  requirements.txt  worker_main.py
tools/: md_chunks_ask.mjs
web/: .gitignore  Dockerfile  README.md  STANDARDS.md  fix_icons.py  fix_missing_icons.py  next.config.js  package-lock.json  package.json  playwright.config.ts
widget/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+1445 files in other folders)
